# differentiable-queueing

./: .gitignore
differentiable-queueing/: CITATION.cff  CLAUDE.md  HOW_TO_VERIFY.md  INDEX.md  PROFESSOR_PACKAGE.md  PROGRESS.md  README.md  REPRODUCTION_GUIDE.md  REPRODUCTION_LEDGER.md  REPRODUCTION_PLAN.md  pyproject.toml
differentiable-queueing/PPO/: WC_results.json  cmu_results.json  train.py  train_gpu.py  vanilla_bc_results.json  vanilla_results.json
differentiable-queueing/cmu/: ablation_plots.py  cmu_graph.py  fig9_1_errorbars.py  pathwise_ablation_T_2000.json  pathwise_ablation_T_500.json  pathwise_ablation_T_5000.json  pathwise_ablation_num_iter_10.json  pathwise_ablation_num_iter_100.json  pathwise_ablation_num_iter_50.json  pathwise_ablation_queue_class_15.json  pathwise_ablation_queue_class_20.json  pathwise_ablation_queue_class_5.json  pathwise_ablation_rho_0.9.json  pathwise_ablation_rho_0.95.json  pathwise_ablation_rho_0.99.json  pathwise_step_rule_adagrad.json  pathwise_step_rule_adam.json  pathwise_step_rule_adam_K100.json  pathwise_step_rule_amsgrad.json  pathwise_step_rule_normalized_diminishing.json  pathwise_step_rule_normalized_fixed.json  pathwise_step_rule_normalized_fixed_K100.json  pathwise_step_rule_normalized_polyak.json  pathwise_step_rule_rmsprop.json  pathwise_step_rule_rmsprop_K100.json  pathwise_step_rule_unnormalized_fixed.json  pathwise_wc_cmu1_multiclass10.json  pathwise_wc_cmu_multiclass.json  pathwise_wc_cmu_multiclass10.json  pathwise_wc_cmu_multiclass5.json  pathwise_wc_cmu_multiclass5_all_eps.json  (+35 more)
(+303 files in other folders)
